test-suite/tests/ui/title-string-value.stderr
error: Invalid value for #[table(title = "field_name")]
 --> $DIR/title-string-value.rs:6:21
  |
6 |     #[table(title = 1)]
  |                     ^
